--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: objective-c
+before_install:
+  - gem install cocoapods
 before_script:
   - export LANG=en_US.UTF-8
   - cd Demo ; pod install ; cd ..
