--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ before_install:
   - gem install cocoapods
 before_script:
   - export LANG=en_US.UTF-8
-  - cd Demo ; pod install ; cd ..
+  - cd Demo ; pod update ; cd ..
 script: xctool -workspace Demo/RPBorderlessSegmentedControlDemo.xcworkspace -scheme RPBorderlessSegmentedControlDemo build
